[package]
name = "payment-transaction-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.17"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
serde = { version = "1", features = ["derive"] }
